<resources>
    <string name="app_name">PIRSS</string>
    <string name="name">Name</string>
    <string name="enter_name">Enter Your Name</string>
    <string name="email">Email Id</string>
    <string name="enter_email">Enter Your Email Id</string>
    <string name="password">Password</string>
    <string name="enter_password">Enter Password</string>
    <string name="re_password">Confirm Password</string>
    <string name="enter_password_again">Confirm Password</string>
    <string name="sign_up">Sign up</string>
    <string name="already_account">Already have an account ?</string>
    <string name="login">Sign In</string>
    <string name="sign_in">Sign In</string>
    <string name="forgot_text">Forgot Password?</string>
    <string name="sign_in_google">Sign in with google</string>
    <string name="no_account">"Don't have an account ?</string>
    <string name="voter_id_number">Voter ID Number</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="ddmmyyyy">DDMMYYYY</string>
    <string name="aadhar_number">Aadhar Number</string>
    <string name="enter_aadhar_no">Enter Aadhar number</string>
    <string name="pan_number">PAN Number</string>
    <string name="enter_pan_no">Enter PAN number</string>
    <string name="driving_license_number">Driving License Number</string>
    <string name="profile_pic">Profile Picture</string>
    <string name="username">User name</string>
    <string name="approved_by_inst_name">NIELIT India</string>
    <string name="edit_profile">Edit profile</string>
    <string name="sign_out">Sign out</string>
    <string name="save_profile">Save profile</string>
    <string name="enter_designation">Enter designation</string>
    <string name="enter_driving_license_number">Enter Driving License number</string>
    <string name="enter_voter_id_number">Enter Voter ID number</string>
    <string name="reset_password">RESET PASSWORD</string>
    <string name="user_active">User Active</string>
    <string name="enable_user">Enable</string>
    <string name="disable_user">Disable</string>
    <string name="admin_screen">Admin Screen</string>
    <string name="add_doc">Add Document</string>
    <string name="doc_name">Document Name</string>
    <string name="enter_doc_name">Enter Document Name</string>
    <string name="doc_id">Document ID</string>
    <string name="enter_doc_id">Enter Document ID</string>
    <string name="doc_img">Document Image</string>
    <string name="button_okay">Okay</string>
    <string name="button_cancel">Cancel</string>
    <string name="header_image">Header Image</string>
    <string name="enable_disable">Enable/Disable</string>
    <string name="switch_enabled">Enabled</string>
    <string name="switch_disabled">Disabled</string>
    <string name="is_admin">Admin Access</string>
    <string name="is_admin_yes">Y</string>
    <string name="is_admin_no">N</string>
    <string name="button_close">close</string>
    <string name="pirss">PIRSS</string>
</resources>