<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:Ignore="HardCodedText"
    tools:context=".SignUpScreenActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:background="@color/colorPrimaryDark">

            <ImageView
                android:id="@+id/ep_profile_pic"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_centerInParent="true"
                android:background="@drawable/shape_user"
                android:contentDescription="@string/app_name"
                android:src="@drawable/user" />

            <ImageButton
                android:id="@+id/ep_edit_profile_pic_button"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginStart="230dp"
                android:layout_marginTop="120dp"
                android:background="#000000"
                android:clickable="true"
                android:contentDescription="@string/profile_pic"
                android:focusable="true"
                android:src="@android:drawable/ic_menu_edit" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="50dp"
            android:layout_marginRight="20dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/ep_tv_username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/ep_edtxt_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="Name"
                android:backgroundTint="@color/colorPrimaryDark"
                android:hint="@string/enter_name"
                android:inputType="text"
                android:minHeight="48dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="20dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/ep_tv_dob"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/date_of_birth"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/ep_edtxt_dob"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="Date of Birth"
                android:backgroundTint="@color/colorPrimaryDark"
                android:hint="@string/ddmmyyyy"
                android:inputType="date" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="20dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/ep_tv_aadhar_no"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/aadhar_number"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/ep_edtxt_aadhar_no"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="Date of Birth"
                android:backgroundTint="@color/colorPrimaryDark"
                android:hint="@string/enter_aadhar_no"
                android:inputType="text"
                android:maxLength="12" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="20dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/ep_tv_pan_no"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pan_number"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/ep_edtxt_pan_no"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="Date of Birth"
                android:backgroundTint="@color/colorPrimaryDark"
                android:hint="@string/enter_pan_no"
                android:maxLength="10"
                android:inputType="text" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="20dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/ep_tv_email_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/email"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/ep_edtxt_email_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="Email"
                android:backgroundTint="@color/colorPrimaryDark"
                android:hint="@string/enter_email"
                android:inputType="textEmailAddress" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="20dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/ep_tv_driving_license_no"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/driving_license_number"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/ep_edtxt_driving_license_no"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="Confirm Password"
                android:backgroundTint="@color/colorPrimaryDark"
                android:hint="@string/enter_driving_license_number"
                android:inputType="text" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="20dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/ep_tv_voter_id_no"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/voter_id_number"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/ep_edtxt_voter_id_no"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="Country Name"
                android:backgroundTint="@color/colorPrimaryDark"
                android:hint="@string/voter_id_number"
                android:inputType="text" />
        </LinearLayout>

        <Button
            android:id="@+id/save_profile_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:background="@drawable/shape_sign_in_button"
            android:text="@string/save_profile"
            android:textColor="@android:color/white"
            android:textSize="20sp" />

        <Button
            android:id="@+id/forgot_password_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/reset_password"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textSize="16sp" />

    </LinearLayout>

    <!--<de.codecrafters.tableview.TableView
        xmlns:table="http://schemas.android.com/apk/res-auto"
        android:id="@+id/as_table_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        table:tableView_columnCount="4" />-->
</ScrollView>