<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:theme="@style/CompatTheme"
    app:cardElevation="10dp"
    app:cardMaxElevation="12dp"
    app:cardPreventCornerOverlap="true"
    app:cardUseCompatPadding="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/clasr_tv_userId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:textAlignment="center"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="20sp"
            android:visibility="gone" />

        <TextView
            android:id="@+id/clasr_tv_username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:textAlignment="center"
            android:maxLength="15"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="15sp" />

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/clasr_enable_disable_switch"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:checked="true"
            android:background="@color/colorGrey"
            android:textOn="@string/switch_enabled"
            android:textOff="@string/switch_disabled" />

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/clasr_admin_toggle_switch"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:checked="false"
            android:background="@color/colorGrey"
            android:textOn="@string/is_admin_yes"
            android:textOff="@string/is_admin_no" />


    </LinearLayout>

</androidx.cardview.widget.CardView>