<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardElevation="10dp"
    app:cardMaxElevation="12dp"
    app:cardPreventCornerOverlap="true"
    app:cardUseCompatPadding="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/clvi_doc_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/doc_name"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="20sp"
                android:maxLength="40"/>

            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <ImageButton
                android:id="@+id/clvi_share_button"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:background="#0000FF"
                android:clickable="true"
                android:contentDescription="@string/profile_pic"
                android:focusable="true"
                android:src="@android:drawable/ic_menu_share" />

            <ImageButton
                android:id="@+id/clvi_copy_button"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:background="#00FF00"
                android:clickable="true"
                android:contentDescription="@string/profile_pic"
                android:focusable="true"
                android:src="@android:drawable/ic_menu_search" />

        </LinearLayout>

        <TextView
            android:id="@+id/clvi_doc_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/doc_id"
            android:textColor="#000000"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/clvi_doc_encoded_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/doc_img"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="20sp"
            android:visibility="gone" />

    </LinearLayout>

</androidx.cardview.widget.CardView>